[TEMP] Created quickstart that uses byteman out of the box